--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ hr {
 
 .welcome {
   text-align: left;
-  width: 40%;
+  width: 60%;
   position: absolute;
   left: 15%;
   top: 30%;
@@ -221,14 +221,13 @@ hr {
 
 /* projects section */
 .project {
-  height: 100vh;
   width: 100vw;
   background-color: #3b6978d4;
   text-align: center;
+  padding: 20% 0 20% 0;
 }
 
 .excuse{
-  padding-top:20%;
   width: 50%;
   margin: auto;
 }
@@ -250,7 +249,6 @@ hr {
 .contact {
   background-color: #84a9ac;
   width: 100vw;
-  height: 80vh;
   text-align: center;
   padding: 9% 10% 10% 10%;
   margin: auto;
